src/test/test-models/bad/compound-assign/plus_equals_bad_init.stan
generated quantities {
  vector[3] gq_v3_a = [1, 2, 3]';
  vector[3] gq_v3_b += gq_v3_a;
}
